--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -4,16 +4,22 @@
   padding: 0;
 }
 
-div {
+.centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form {
   display: flex;
   flex: 1;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  /* height: 100vh; */
 
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 span {
@@ -31,4 +37,50 @@ span {
 
 .textContainer a {
   padding: 10px;
+}
+
+form input {
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  width: 350px;
+  height: 40px;
+
+  border: 3px solid;
+  font-size: 12px;
+  letter-spacing: 2px;
+  text-decoration: none;
+
+  margin: 10px;
+}
+
+form button {
+  border: 3px solid;
+  font-size: 12px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+
+  cursor: pointer;
+  padding: 1em 1em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 150px;
+  margin: 10px;
+}
+
+button:hover {
+  text-transform: none;
+  text-decoration: underline;
+}
+
+button:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
 }
