--- a/src/pages/UserHome/styles.css
+++ b/src/pages/UserHome/styles.css
@@ -17,6 +17,21 @@
   box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
     5px 5px 0px 0px;
 }
+
+form input {
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  width: 350px;
+  height: 40px;
+
+  border: 3px solid;
+  font-size: 12px;
+  letter-spacing: 2px;
+  text-decoration: none;
+
+  margin: 10px;
+}
 .techs {
   display: flex;
 
